Fix missing Linebreaks in paragraphs

--- a/src/styles.css
+++ b/src/styles.css
@@ -67,6 +67,7 @@ h4 {
 
 p {
   line-height: 1.5;
+  white-space: pre-line;
 }
 
 a,
